--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1934,6 +1934,9 @@ python-technove==1.3.1
 # homeassistant.components.telegram_bot
 python-telegram-bot[socks]==21.5
 
+# homeassistant.components.rako
+python_rako==0.0.9
+
 # homeassistant.components.tile
 pytile==2023.12.0
 
